--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -17,12 +17,12 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @task.category_id %>
+  <%= @task.category.categoryname %>
 </p>
 
 <p>
   <strong>User:</strong>
-  <%= @task.user_id %>
+  <%= @task.user.username %>
 </p>
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
