--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 ﻿<p id="notice"><%= notice %></p>
 
-<h1>Listing Tasks</h1>
+<h1>タスク一覧</h1>
 
 <%= form_tag(:action=>"search") do %>
   <%= collection_select "search", "user", User.all, :id, :username, {selected: @search_user, include_blank: "全員"} %>
@@ -13,11 +13,11 @@
 <table>
   <thead>
     <tr>
-      <th>Done</th>
-      <th>Due date</th>
-      <th>Name</th>
-      <th>Category</th>
-      <th>User</th>
+      <th>終わった</th>
+      <th>期日</th>
+      <th>名前</th>
+      <th>カテゴリー</th>
+      <th>ユーザー</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -30,9 +30,9 @@
         <td><%= task.name %></td>
         <td><%= task.category.categoryname %></td>
         <td><%= task.user.username %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '見る', task %></td>
+        <td><%= link_to '戻る', edit_task_path(task) %></td>
+        <td><%= link_to '削除', task, method: :delete, data: { confirm: 'まじで???' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -40,4 +40,4 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
+<%= link_to '新しいタスク', new_task_path %>
